# orchestrator

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  LICENSE.txt  QUICK_START.md  README.md  TMUX_EXPERIMENT.md  claude_code.kdl  claude_code.sh  orchestrator-v2.py  orchestrator.py  pyproject.toml  repos.json  run-reporter.sh  test_single.py  tmux_experiment.sh  tmux_interactive.sh
.claude/: settings.local.json
.claude/agents/: code-review.md  dev-manager.md  master-orchestrator.md  reporter.md
.claude/commands/: synth-notes.md
ai_docs/: the-rise-of-claude-agent-sdk.md
config/: agents.json  overnight.json  repos.json  skills.json  tasks.example.json
docs/: AUTONOMOUS_MODE.md  INTEGRATION_COMPLETE.md  SOAP_NOTES_SKILL_DESIGN.md
docs/adr/: 001-agent-based-orchestration-over-python.md  README.md
docs/architecture/: MCP_SERVER_ARCHITECTURE.md
docs/design/: ACCESS_LAYERS_GUIDE.md  DASHBOARD_POC.md  SYNTHETIC_NOTES_SUBAGENT_DESIGN.md  SYNTH_NOTES_INTEGRATION_SUMMARY.md  SYNTH_NOTES_USAGE.md
docs/devlog/: 2025-12-01-python-orchestrator-lessons.md  global-orchestrator-script.md
docs/guide/: CLI_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md  REPOSITORY_CONFIG.md  USAGE_MODES.md
docs/journal/: 2025-11-20-1856-orchestrator-refactor.md
docs/moc/: README.md  architecture.md  components.md  decisions.md  features.md
src/mcp/: __init__.py  server.py
src/orchestrator/: __init__.py  __main__.py  agent_runner.py  agent_tools.py  config.py  interactive_menu.py  (+2 more)
tests/: __init__.py  test_agent_runner.py  test_agent_tools.py  test_orchestrator.py
(+5 files in other folders)
